--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,7 @@ a:hover {
 .nav_container li {
   display:inline;
   list-style-type: none;
-  margin:4rem;
-
+  margin-left:4rem;
 }
 a {
   font-size: 2rem;
@@ -77,6 +76,7 @@ button {
 }
 button:hover {
   border-color: #646cff;
+  
 }
 button:focus,
 button:focus-visible {
@@ -107,6 +107,7 @@ footer{
   }
 }
 
+/* ________________-BLACK MIRROR FONT _______________ */
 h1 {
   position: relative;
   font-family: 'Montserrat', Arial, sans-serif;
